// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component-controls generated Plugins/ViewportBlock overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <div
                  style="display: inline-block;"
                >
                  <button
                    class="css-97huhz"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-10nnqwz-ViewportBlock"
            >
              <div
                class="css-77fsv4-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-bff87g-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  320px
                </span>
              </div>
              <div
                class="css-x0hg6m-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1xj1pl2-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  375px
                </span>
              </div>
              <div
                class="css-1j6jxrr-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1xpqjvh-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  768px
                </span>
              </div>
              <div
                class="css-aua95t-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-xxu1iu-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  1024px
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component-controls generated Plugins/ViewportBlock sizes 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="css-15owl46"
          >
            <div
              class="css-x60p33"
            >
              <div
                class="css-1vga9oy"
              >
                <div
                  style="display: inline-block;"
                >
                  <button
                    class="css-97huhz"
                  >
                    widths
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-eqxzio"
          >
            <div
              class="css-10nnqwz-ViewportBlock"
            >
              <div
                class="css-1bxbzmw-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-ks1xfj-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  xsmall
                </span>
              </div>
              <div
                class="css-y3p6ve-HoverBox"
              >
                <div
                  class="css-xtndwh"
                >
                  <div
                    class="css-1jzdp2u-Story"
                  >
                    <div
                      class="css-jxxswp"
                      id=""
                    >
                      <div
                        class="css-xhp9da"
                      >
                        <h3
                          class="css-16ist9v-BlockContainer"
                        />
                      </div>
                    </div>
                    <div
                      aria-hidden="false"
                      class="rah-static rah-static--height-auto"
                      style="height: auto; overflow: visible;"
                    >
                      <div>
                        <div
                          class="css-154oin1"
                          data-testid="story"
                          id="blocks-core-story-plain--controls"
                        >
                          <div
                            class="story-render-container css-dhmrnb"
                          >
                            <svg
                              aria-valuemax="1"
                              aria-valuemin="0"
                              aria-valuenow="0.5"
                              class="css-14d2907"
                              fill="none"
                              height="128"
                              role="img"
                              stroke="currentcolor"
                              stroke-width="2"
                              viewBox="0 0 32 32"
                              width="128"
                            >
                              <circle
                                cx="16"
                                cy="16"
                                opacity="0.125"
                                r="14"
                              />
                              <circle
                                cx="16"
                                cy="16"
                                r="14"
                                stroke-dasharray="87.96459430051421"
                                stroke-dashoffset="43.982297150257104"
                                transform="rotate(-90 16 16)"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="hoverbox-text css-1cgogy4"
                >
                  small
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
